<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>info.couto.demo</groupId>
  <artifactId>apifirst-microservice</artifactId>
  <version>dev</version>
  <packaging>pom</packaging>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.5.RELEASE</version>
    <relativePath/>
    <!-- lookup parent from repository -->
  </parent>
  <properties>
    <microservice.version>1.0.0-SNAPSHOT</microservice.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <swagger.version>2.0.12</swagger.version>
    <swagger-ui.version>3.22.2</swagger-ui.version>
    <openapi-generator.version>5.1.0</openapi-generator.version>
    <swagger-annotations.version>1.5.22</swagger-annotations.version>
    <!--    <guava.version>27.1-jre</guava.version>-->
    <spring-cloud-contract.version>2.1.1.RELEASE</spring-cloud-contract.version>
    <spring-cloud-services.version>2.1.4.RELEASE</spring-cloud-services.version>
    <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
  </properties>
  <modules>
    <module>api</module>
    <module>server</module>
    <module>client</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <configuration>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>process-resources</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.21.0</version>
          <configuration>
            <printSummary>false</printSummary>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
            <argLine>-ea
              -Djava.net.preferIPv4Stack=true
              -Djava.net.preferIPv6Addresses=false
              -XX:+TieredCompilation
              -XX:TieredStopAtLevel=1
              -Xmx768m
              -XX:MaxPermSize=375m
              -Duser.language=en
              -Duser.region=US
              -Duser.timezone=UTC
              -Dfile.encoding=UTF-8
            </argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencyManagement>
    <!--     DEPENDENCY META-->
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.pivotal.spring.cloud</groupId>
        <artifactId>spring-cloud-services-dependencies</artifactId>
        <version>${spring-cloud-services.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-contract-dependencies</artifactId>
        <version>${spring-cloud-contract.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!--      BUILD DEPENDENCIES-->
      <dependency>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>${openapi-generator.version}</version>
      </dependency>
      <!--      DEV DEPENDENCIES-->
      <dependency>
        <groupId>org.openapitools</groupId>
        <artifactId>jackson-databind-nullable</artifactId>
        <version>0.1.0</version>
      </dependency>
      <dependency>
        <groupId>info.couto.demo</groupId>
        <artifactId>apifirst-microservice-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.webjars</groupId>
        <artifactId>swagger-ui</artifactId>
        <version>${swagger-ui.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger-annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.parser.v3</groupId>
        <artifactId>swagger-parser</artifactId>
        <version>${swagger.version}</version>
        <exclusions>
          <exclusion>
            <groupId>io.swagger.parser.v3</groupId>
            <artifactId>swagger-parser-v2-converter</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <!--      TEST DEPENDENCIES-->
      <dependency>
        <groupId>info.couto.demo</groupId>
        <artifactId>apifirst-microservice-api</artifactId>
        <type>test-jar</type>
        <scope>test</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>info.couto.demo</groupId>
        <artifactId>apifirst-microservice-server</artifactId>
        <classifier>noboot</classifier>
        <type>jar</type>
        <scope>test</scope>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
